--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ matrix:
       before_script:
         - pip install --user cpp-coveralls
       after_success:
-        - coveralls --gcov gcov-5 --gcov-options '\-lp' --exclude src
+        - coveralls --gcov gcov-5 --gcov-options '\-lp'
 
 script:
   make CXX=$COMPILER -j3
