--- a/.travis.yml
+++ b/.travis.yml
@@ -62,13 +62,13 @@ matrix:
           packages: ['clang-3.7']
       env: COMPILER=clang++-3.7
 
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.8']
-          packages: ['clang-3.8']
-      env: COMPILER=clang++-3.8
+#    - os: linux
+#      compiler: clang
+#      addons:
+#        apt:
+#          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.8']
+#          packages: ['clang-3.8']
+#      env: COMPILER=clang++-3.8
 
     - os: osx
       compiler: clang
