--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,14 @@ matrix:
           packages: ['g++-5']
       env: COMPILER=g++-5
 
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-6']
-      env: COMPILER=g++-6
+### Not yet allowed
+#    - os: linux
+#      compiler: gcc
+#      addons:
+#        apt:
+#          sources: ['ubuntu-toolchain-r-test']
+#          packages: ['g++-6']
+#      env: COMPILER=g++-6
 
     - os: linux
       compiler: clang
