--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,13 @@ matrix:
           packages: ['g++-5']
       env: COMPILER=g++-5
 
-### Not yet allowed
-#    - os: linux
-#      compiler: gcc
-#      addons:
-#        apt:
-#          sources: ['ubuntu-toolchain-r-test']
-#          packages: ['g++-6']
-#      env: COMPILER=g++-6
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-6']
+      env: COMPILER=g++-6
 
     - os: linux
       compiler: clang
