--- a/.travis.yml
+++ b/.travis.yml
@@ -107,6 +107,11 @@ matrix:
       compiler: clang
       env: COMPILER=clang++
 
+    - os: osx
+      osx_image: xcode8
+      compiler: clang
+      env: COMPILER=clang++
+
     - os: linux
       compiler: gcc
       addons:
