--- a/.travis.yml
+++ b/.travis.yml
@@ -78,39 +78,43 @@ matrix:
           packages: ['clang-3.8']
       env: COMPILER=clang++-3.8
 
-    - os: osx
+    - os: linux
+      dist: trusty
       compiler: clang
-      env: COMPILER=clang++
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.9']
+          packages: ['clang-3.9']
+      env:
+        - COMPILER=clang++-3.9
+
+    - os: linux
+      dist: trusty
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-4.0']
+          packages: ['clang-4.0']
+      env:
+        - COMPILER=clang++-4.0
 
     - os: osx
       osx_image: xcode6.4
       compiler: clang
-      env: COMPILER=clang++
-
-    - os: osx
-      osx_image: xcode7
-      compiler: clang
-      env: COMPILER=clang++
-
-    - os: osx
-      osx_image: xcode7.1
-      compiler: clang
-      env: COMPILER=clang++
-
-    - os: osx
-      osx_image: xcode7.2
-      compiler: clang
-      env: COMPILER=clang++
+      env:
+        - COMPILER=clang++
 
     - os: osx
       osx_image: xcode7.3
       compiler: clang
-      env: COMPILER=clang++
+      env:
+        - COMPILER=clang++
 
     - os: osx
-      osx_image: xcode8
+      osx_image: xcode8.2
       compiler: clang
-      env: COMPILER=clang++
+      env:
+        - COMPILER=clang++
 
     - os: linux
       compiler: gcc
