--- a/.travis.yml
+++ b/.travis.yml
@@ -117,7 +117,13 @@ matrix:
         - CXX=clang++
 
     - os: osx
-      osx_image: xcode8.2
+      osx_image: xcode8.3
+      compiler: clang
+      env:
+        - CXX=clang++
+
+    - os: osx
+      osx_image: xcode9.2
       compiler: clang
       env:
         - CXX=clang++
