--- a/.travis.yml
+++ b/.travis.yml
@@ -141,5 +141,16 @@ matrix:
       after_success:
         - coveralls --gcov gcov-7 --gcov-options '\-lp' --exclude src
 
+    - compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
+          packages: ['clang-5.0', 'clang-tidy-5.0']
+      env:
+        - CXX=clang++-5.0
+        - CLANG_TIDY=clang-tidy-5.0
+      script:
+        - make -kj3 clang-tidy
+
 script:
   make -j3
