--- a/.travis.yml
+++ b/.travis.yml
@@ -17,53 +17,77 @@ matrix:
       env: CXX=g++-4.7
 
     - compiler: gcc
-      env: CXX=g++-4.8
+      env:
+        - CXX=g++-4.8
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9']
-      env: CXX=g++-4.9
+      env:
+        - CXX=g++-4.9
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
-      env: CXX=g++-5
+      env:
+        - CXX=g++-5
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-6']
-      env: CXX=g++-6
+      env:
+        - CXX=g++-6
+
+    - compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-6']
+      env:
+        - CXX=g++-6
+        - CXXSTD=-std=c++14
 
     - compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-7']
-      env: CXX=g++-7
+      env:
+        - CXX=g++-7
+
+    - compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-6']
+      env:
+        - CXX=g++-6
+        - CXXSTD=-std=c++17
 
     - dist: precise
       compiler: clang
-      env: CXX=clang++
+      env:
+        - CXX=clang++
 
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.5']
           packages: ['clang-3.5']
-      env: CXX=clang++-3.5
+      env:
+        - CXX=clang++-3.5
 
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.6']
           packages: ['clang-3.6']
-      env: CXX=clang++-3.6
+      env:
+        - CXX=clang++-3.6
 
     - dist: precise
       compiler: clang
@@ -71,19 +95,19 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
           packages: ['clang-3.7']
-      env: CXX=clang++-3.7
+      env:
+        - CXX=clang++-3.7
 
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.8']
           packages: ['clang-3.8']
-      env: CXX=clang++-3.8
+      env:
+        - CXX=clang++-3.8
 
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.9']
           packages: ['clang-3.9']
       env:
         - CXX=clang++-3.9
@@ -103,6 +127,23 @@ matrix:
           packages: ['clang-5.0']
       env:
         - CXX=clang++-5.0
+
+    - compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-6.0']
+          packages: ['clang-6.0']
+      env:
+        - CXX=clang++-6.0
+
+    - compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-6.0']
+          packages: ['clang-6.0']
+      env:
+        - CXX=clang++-6.0
+        - CPPFLAGS=-fms-extensions
 
     - os: osx
       osx_image: xcode6.4
@@ -147,10 +188,11 @@ matrix:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
           packages: ['clang-5.0', 'clang-tidy-5.0']
       env:
-        - CXX=clang++-5.0
-        - CLANG_TIDY=clang-tidy-5.0
+        - CXX=clang++-6.0
+        - CLANG_TIDY=clang-tidy-6.0
       script:
         - make -kj3 clang-tidy
 
 script:
-  make -j3
+  - $CXX --version
+  - make -kj3
