--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,10 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-6']
+          packages: ['g++-5']
       env:
-        - CXX=g++-6
+        - CXX=g++-5
+        - CXXSTD=-std=c++14
 
     - compiler: gcc
       addons:
@@ -51,7 +52,6 @@ matrix:
           packages: ['g++-6']
       env:
         - CXX=g++-6
-        - CXXSTD=-std=c++14
 
     - compiler: gcc
       addons:
@@ -69,6 +69,14 @@ matrix:
       env:
         - CXX=g++-7
         - CXXSTD=-std=c++17
+
+    - compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-8']
+      env:
+        - CXX=g++-8
 
     - dist: precise
       compiler: clang
