#10 Build Conan on Travis CI
- Add job to build Conan package
- Run Travis for every new push

Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ language: generic
 os: linux
 dist: trusty
 
-branches:
-  only:
-    - master
-
 matrix:
   include:
     - dist: precise
@@ -200,6 +196,18 @@ matrix:
         - CLANG_TIDY=clang-tidy-6.0
       script:
         - make -kj3 clang-tidy
+
+    - language: python
+      python:
+        - "3.6"
+      sudo: required
+      install:
+        - pip install conan conan-package-tools
+      env:
+        - CONAN_GCC_VERSIONS=7
+        - CONAN_DOCKER_IMAGE=lasote/conangcc7
+      script:
+        - python .conan/build.py
 
 script:
   - $CXX --version
