#10 Rename cmake target to taocpp::operators
- Install taocpp-operatos-config.cmake at /share/taocpp-operators/cmake
- Solve cmake target as taocpp::operators instead of taocpp::taocpp-operators

Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.conan/test_package/CMakeLists.txt
+++ b/.conan/test_package/CMakeLists.txt
@@ -9,4 +9,4 @@ conan_basic_setup()
 find_package(taocpp-operators REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
-target_link_libraries(${PROJECT_NAME} taocpp::taocpp-operators)
+target_link_libraries(${PROJECT_NAME} taocpp::operators)
