--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,18 @@ project (taocpp-operators VERSION 1.0.2 LANGUAGES CXX)
 # installation directories
 set (TAOCPP_OPERATORS_INSTALL_INCLUDE_DIR "include" CACHE STRING "The installation include directory")
 set (TAOCPP_OPERATORS_INSTALL_DOC_DIR "share/doc/tao/operators" CACHE STRING "The installation doc directory")
-set (TAOCPP_OPERATORS_INSTALL_CMAKE_DIR "share/tao/operators/cmake" CACHE STRING "The installation cmake directory")
+set (TAOCPP_OPERATORS_INSTALL_CMAKE_DIR "share/taocpp-operators/cmake" CACHE STRING "The installation cmake directory")
 
 # define a header-only library
-add_library (taocpp-operators INTERFACE)
-add_library (taocpp::operators ALIAS taocpp-operators)
-target_include_directories (taocpp-operators INTERFACE
+add_library (operators INTERFACE)
+add_library (taocpp::operators ALIAS operators)
+target_include_directories (operators INTERFACE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:${TAOCPP_OPERATORS_INSTALL_INCLUDE_DIR}>
 )
 
 # features used by taocpp/operators
-target_compile_features (taocpp-operators INTERFACE
+target_compile_features (operators INTERFACE
   cxx_constexpr
   cxx_noexcept
   cxx_rvalue_references
@@ -30,9 +30,9 @@ if (TAOCPP_OPERATORS_BUILD_TESTS)
 endif ()
 
 # install and export target
-install (TARGETS taocpp-operators EXPORT taocpp-operators-targets)
+install (TARGETS operators EXPORT operators-targets)
 
-install (EXPORT taocpp-operators-targets
+install (EXPORT operators-targets
   FILE taocpp-operators-config.cmake
   NAMESPACE taocpp::
   DESTINATION ${TAOCPP_OPERATORS_INSTALL_CMAKE_DIR}
