--- a/src/test/operators/CMakeLists.txt
+++ b/src/test/operators/CMakeLists.txt
@@ -1,25 +1,27 @@
 cmake_minimum_required (VERSION 3.3.0 FATAL_ERROR)
-file (GLOB glob_test_sources RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.cpp)
 
 set (test_sources
   no_rvalue_reference_results.cpp
   test_operators.cpp
 )
 
+# file (GLOB ...) is used to validate the above list of test_sources
+file (GLOB glob_test_sources RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.cpp)
+
 foreach (testsourcefile ${test_sources})
   if (${testsourcefile} IN_LIST glob_test_sources)
     list (REMOVE_ITEM glob_test_sources ${testsourcefile})
-  else(${testsourcefile} IN_LIST glob_test_sources)
+  else ()
     message (SEND_ERROR "File ${testsourcefile} is missing from src/test/operators")
-  endif(${testsourcefile} IN_LIST glob_test_sources)
+  endif ()
 
   get_filename_component (exename ${testsourcefile} NAME_WE)
   add_executable (${exename} ${testsourcefile})
   target_link_libraries (${exename} PRIVATE taocpp::operators)
-  set_target_properties(${exename} PROPERTIES
-      CXX_STANDARD 11
-      CXX_STANDARD_REQUIRED ON
-      CXX_EXTENSIONS OFF
+  set_target_properties (${exename} PROPERTIES
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
   )
   if (MSVC)
     target_compile_options (${exename} PRIVATE /W4 /WX /utf-8)
@@ -29,9 +31,8 @@ foreach (testsourcefile ${test_sources})
   add_test (NAME ${exename} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../.. COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${exename})
 endforeach (testsourcefile)
 
-
-if(glob_test_sources)
- foreach(ignored_source_file ${glob_test_sources})
-   message(SEND_ERROR "File ${ignored_source_file} in src/test/operators is ignored")
- endforeach(ignored_source_file ${glob_test_sources})
-endif(glob_test_sources)
+if (glob_test_sources)
+  foreach (ignored_source_file ${glob_test_sources})
+    message (SEND_ERROR "File ${ignored_source_file} in src/test/operators is ignored")
+  endforeach (ignored_source_file)
+endif ()
