--- a/src/test/operators/CMakeLists.txt
+++ b/src/test/operators/CMakeLists.txt
@@ -16,7 +16,7 @@ foreach (testsourcefile ${test_sources})
   endif ()
 
   get_filename_component (exename ${testsourcefile} NAME_WE)
-  set_executable (exename "tao-operators-test-${exename}")
+  set (exename "tao-operators-test-${exename}")
   add_executable (${exename} ${testsourcefile})
   target_link_libraries (${exename} PRIVATE taocpp::operators)
   set_target_properties (${exename} PROPERTIES
