--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ matrix:
       env: CXX=g++-4.7
 
     - compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
       env:
         - CXX=g++-4.8
 
@@ -211,11 +215,11 @@ matrix:
     - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-7']
-          packages: ['clang-7', 'clang-tidy-7']
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
+          packages: ['clang-8', 'clang-tidy-8']
       env:
-        - CXX=clang++-7
-        - CLANG_TIDY=clang-tidy-7
+        - CXX=clang++-8
+        - CLANG_TIDY=clang-tidy-8
       script:
         - make -kj3 clang-tidy
 
