--- a/.travis.yml
+++ b/.travis.yml
@@ -97,11 +97,9 @@ matrix:
       env:
         - CXX=clang++-3.6
 
-    - dist: precise
-      compiler: clang
+    - compiler: clang
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
           packages: ['clang-3.7']
       env:
         - CXX=clang++-3.7
