--- a/.travis.yml
+++ b/.travis.yml
@@ -216,7 +216,9 @@ matrix:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-8']
           packages: ['clang-8', 'clang-tools-8']
       env:
-        - CXX=scan-build-8
+        - CXX=clang++-8
+      script:
+        - scan-build-8 make -kj3
 
     - compiler: clang
       addons:
