--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,14 @@ matrix:
       env:
         - CXX=g++-8
 
+    - compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-9']
+      env:
+        - CXX=g++-9
+
     - dist: precise
       compiler: clang
       env:
