--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,6 +19,12 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017 Win64
 
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      GENERATOR: Visual Studio 16 2019
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      GENERATOR: Visual Studio 16 2019 Win64
+
     - GENERATOR: MinGW Makefiles
       BINDIR: C:\MinGW\bin
 
