--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,10 @@
 version: '{branch}-{build}'
 
-os:
-- Visual Studio 2015
+image: Visual Studio 2015
+
+platform:
+- x86
+- x64
 
 configuration:
 - Release
@@ -9,17 +12,19 @@ configuration:
 
 environment:
   matrix:
-    - GENERATOR: Visual Studio 14 2015
+    - image: Visual Studio 2015
+      GENERATOR: Visual Studio 14 2015
 
-    - GENERATOR: Visual Studio 14 2015 Win64
+    - image: Visual Studio 2015
+      GENERATOR: Visual Studio 14 2015 Win64
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - image: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - image: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017 Win64
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    - image: Visual Studio 2019
       GENERATOR: Visual Studio 16 2019
 
     - GENERATOR: MinGW Makefiles
@@ -37,7 +42,7 @@ environment:
       COMPILER: MinGW 6
       BINDIR: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - image: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017
       CONAN_VISUAL_VERSIONS: 15
       PYTHON: "C:\\Python27"
